--- a/about.css
+++ b/about.css
@@ -46,7 +46,7 @@ padding-right: 8%;
 }
 
 main {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../slike/bgabout.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bgabout.jpg");
   background-size: cover;
   width: 100%;
   height: auto;
@@ -93,7 +93,7 @@ main .text h1 {
 }
 
 #drugideo {
-  background-image: url("../slike/bgabout2.jpg");
+  background-image: url("bgabout2.jpg");
   background-size: cover;
   width: 100%;
   height: auto;
@@ -164,7 +164,7 @@ h3 {
 }
 
 footer {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../slike/bg6.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bg6.jpg");
   background-size: cover;
   width: 100%;
   height: auto;
