--- a/gallery.css
+++ b/gallery.css
@@ -42,7 +42,7 @@ padding-right: 8%;
 }
 
 main {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../slike/bgstvarnogal.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("bgstvarnogal.jpg");
   background-size: cover;
   width: 100%;
   height: auto;
@@ -90,7 +90,7 @@ main .text h1 {
   font-size: 1.5em;
 }
 #drugideo {
-  background-image: url("../slike/bgabout2.jpg");
+  background-image: url("bgabout2.jpg");
   background-size: cover;
   width: 100%;
   height: auto;
@@ -103,7 +103,7 @@ main .text h1 {
   padding: 6% 0;
 }
 #cetvrtideo {
-  background-image: url("../slike/bgabout2.jpg");
+  background-image: url("bgabout2.jpg");
   background-size: cover;
   width: 100%;
   height: auto;
@@ -143,7 +143,7 @@ h2 {
 }
 
 footer {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../slike/bg6.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bg6.jpg");
   background-size: cover;
   width: 100%;
   height: auto;
